Fix redundant horizontal scrollbar in HTML editor (#1489950)

--- a/skins/classic/editor_content.css
+++ b/skins/classic/editor_content.css
@@ -27,5 +27,4 @@ blockquote
 	padding-left: 5px;
 	border-left: #1010ff 2px solid;
 	margin-left: 5px;
-	width: 100%;
 }
